--- a/webstudiocss/webstudio_page.css
+++ b/webstudiocss/webstudio_page.css
@@ -6,7 +6,7 @@ body, html {
 
 .webstudio .background-image{
     /*background-image: url(../Images/webstudio-backgroundimage.jpg);*/
-            background-image: url(../Images/webstudiolaptopwallpaper.jpg);
+    background-image: url(../Images/webstudiolaptopwallpaper.jpg);
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
@@ -17,15 +17,17 @@ body, html {
     background-attachment: fixed;
 }
 .webstudio .background-image-middle{
-        background-image: url(../Images/webstudiolaptopwallpaper.jpg);
+    background-image: url(../Images/webstudiolaptopwallpaper.jpg);
     height: 80%;
     opacity: 1;
 }
 .webstudio .right-align-text{
     float: right;
-    width: 30rem;
+    width: 50%;
     margin-right: 5rem;
     text-align: justify;
+    font-size: 30px;
+    /*margin-bottom: 50px;*/
 }
 .webstudio .background-image-botttom{
     height: 30%;
@@ -37,7 +39,7 @@ body, html {
     width: 100%;
     height: 3rem;
     background-color: black;
-    opacity: 0.9;
+    /*opacity: 0.9;*/
 }
 .webstudio .menu{
     display: inline-block;
@@ -60,6 +62,8 @@ body, html {
     padding-left: 32%;
     display: block;
     width: 35rem;
+    position: relative
+        z-index: -1;
 }
 .webstudio .getstarted-input{
     height: 3rem;
@@ -122,8 +126,10 @@ body, html {
     margin: 3rem;
     cursor: pointer;
     background-color: #0000;
-    opacity: 0.4;
+    /*opacity: 0.4;*/
     text-align: justify;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.9), 0 1px 2px rgba(0,0,0,0.9);
+    transition: all 0.7s cubic-bezier(.25,.8,.25,1);
 }
 .webstudio .heading{
     font-size: 50px;
@@ -157,7 +163,9 @@ body, html {
 .webstudio .tutorial-container:hover{
     opacity: 0.7;
     background-color:  #0000;
-    border: 2px dotted white;
+    /*border:2px dotted white;*/
+    box-shadow: 0px 14px 28px rgba(128,128,128,128), 0px 10px 10px rgba(128,128,128,128);
+
 }
 .webstudio .footer{
     height: 20%;
@@ -165,11 +173,13 @@ body, html {
 }
 /*START:header-block*/
 .webstudio .header-block{
-   height:13rem;
-background-color: black;
-display: none;
-opacity: 1;
-/*position: absolute;*/
+    height:13rem;
+    background-color: black;
+    display: none;
+    opacity: 1;
+    width: 100%;
+    position: absolute;
 }
+
 
 /*END:header-block*/
